@@ -11,6 +11,7 @@ libqof_backend_gda_la_SOURCES = \
  qof-gda.c
 
 libqof_backend_gda_la_LDFLAGS = \
+ -L${top_srcdir}/qof \
  -version-info $(LIBQOF_BACKEND_QGDA_VERSION)
 
 libqof_backend_gda_la_LIBADD = \
